<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:onClick="clickNormal"
        android:text="@string/normal_listview" />

    <Button
        android:id="@+id/listview_fragment_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickListViewFragmentViewpager"
        android:text="@string/list_fragment_viewpager" />

    <Button
        android:id="@+id/multiholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickMultiHolder"
        android:text="@string/multi_holder" />

    <Button
        android:id="@+id/recyleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickRecyclerView"
        android:text="@string/recyclerview" />

    <Button
        android:id="@+id/list_to_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickListSmoothToDetail"
        android:text="@string/list_to_detail" />

    <Button
        android:id="@+id/list_auto_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickListAutoPlay"
        android:text="@string/list_auto_play" />

    <Button
        android:id="@+id/btn_tiktok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickTikTok"
        android:text="@string/tiktok" />
</LinearLayout>
