<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <cn.jzvd.JzvdStd
                android:id="@+id/jz_video"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:onClick="clickRotationTo0"
                android:text="@string/rotation_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickRotationTo90"
                android:text="@string/rotation_90" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickRotationTo180"
                android:text="@string/rotation_180" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickRotationTo270"
                android:text="@string/rotation_270" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:onClick="clickVideoImageDiaplayAdapter"
                android:text="@string/video_img_default" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickVideoImageDisplayFillParent"
                android:text="@string/video_fill_parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickVideoImageDisplayFillCrop"
                android:text="@string/video_fill_crop" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="clickVideoImageDiaplayOriginal"
                android:text="@string/video_img_origin" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>