<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <cn.jzvd.JzvdStd
        android:id="@+id/videoplayer"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/change_to_ijkplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:onClick="clickChangeToIjkplayer"
        android:text="@string/change_ijk" />

    <Button
        android:id="@+id/change_to_system_mediaplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:onClick="clickChangeToSystem"
        android:text="@string/change_system_player" />

    <Button
        android:id="@+id/change_to_exo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:onClick="clickChangeToExo"
        android:text="@string/change_exo" />

    <Button
        android:id="@+id/change_to_aliyun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:onClick="clickChangeToAliyun"
        android:text="@string/change_aliyun" />
</LinearLayout>